Remove border in no_badge version
Create version that does not contain the badge, only the imagery.

Remove border.

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
-Various versions of the ArchiveTeam logo, suitable for different contexts. See the various branches for more.
+Various versions of the ArchiveTeam logo, suitable for different contexts. See the various branches for more:
+
+  * no-badge: Only the imagery, no text or oval border
 
 Note that I did not create this logo, and do not claim authorship for it.
