Add descriptions of different branches
additionally, clarify some wording.

--- a/README
+++ b/README
@@ -1,3 +1,6 @@
-Various versions of the ArchiveTeam logo, suitable for different contexts. See the various branches for more.
+Various versions of the ArchiveTeam logo, suitable for different contexts. See the various branches for more:
 
-Note that I did not create this logo, and do not claim authorship for it.
+  * no-badge: Only the imagery, no text or oval border
+  * icon: Icon versions of the logo, at different sizes.
+
+Note that I did not create the original version this logo, and do not claim authorship for it.
