Split logo into layers
To remove detail for smaller icon versions, we'll want
to get rid of the cloud, and resize the servers and
flames.

Split the logo into layers for each of the three image elements we will
need to manipulate:
* Cloud
* Server & Flames
* Archivist

There is some increased aliasing, especially around the tops of the
flames. However, it shouldn't be noticeable at the icon sizes we're going
to be scaling to.

--- a/README
+++ b/README
@@ -4,3 +4,11 @@ Various versions of the ArchiveTeam logo, suitable for different contexts. See t
   * icon: Icon versions of the logo, at different sizes.
 
 Note that I did not create the original version this logo, and do not claim authorship for it.
+
+
+The Archiveteam_logo_layers directory
+-------------------------------------
+
+PNG does not support layers. In addition to the Paint.net .pdn file, and a flattened PNG, I've provided a
+directory with individual pngs of each layer. Lowest number corresponds to lowest layer in the
+stacking order.
